--- a/www/style.css
+++ b/www/style.css
@@ -1,6 +1,6 @@
 /*
  * EMULAB-COPYRIGHT
- * Copyright (c) 2000-2003, 2005, 2006, 2007 University of Utah and the Flux Group.
+ * Copyright (c) 2000-2003, 2005-2007 University of Utah and the Flux Group.
  * All rights reserved.
  */
 
@@ -30,6 +30,7 @@ table.nogrid { border: solid 1px #669; background-color:#99A; }
 table.stealth { border: 0px; background-color:#FFF; }
 td.stealth { background-color:#FFF; }
 img.stealth { background-color:#FFF; }
+img.tbpic { float: right; clear: both; }
 
 table.topbar { border-bottom: solid 2px #000; }
 table.bottombar { border-top: solid 2px #000; }
@@ -39,7 +40,7 @@ td.paddedcell { padding-left: 0.5em; padding-right: 0.5em; padding-top: 0.75em; 
 td.paddedcell2 { padding: 0.5em; }
 
 /* BEGIN Banner - Draw and size the banner div across the top. */
-.bannercell {
+#bannercell {
   background-color: #dae3e9;
   background-image: url("logo-background.gif");
   background-repeat: repeat-x;
@@ -50,30 +51,64 @@ td.paddedcell2 { padding: 0.5em; }
   width: 100%;
   height: 100px;
 }
-iframe.usageframe {
+
+#fancybannercell {
+  background-color: #000000;
+  background-image: url("fancy-banner.png");
+  background-repeat: no-repeat;
+  border-bottom: solid 2px #666666;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 100px;
+}
+
+/* Styling for the usage box title and cells. */
+iframe.usageframe, iframe.transparentusageframe {
   width: 275px;
   height: 100px;
   border: 0px;
   margin: 0px;
   float: right;
   padding: 0px;
+  background-color: #444444;
+}
+iframe.transparentusageframe {
+  opacity: 0.85;
+  /* Why, IE, why?! */
+  filter: alpha(opacity=85);
+  -moz-opacity: 0.85;
 }
 
-/* Styling for the usage box title and cells. */
+div#usage table {
+    border-width: 0px;
+    background-color: #666666;
+    /* Force the same height as the banner */
+    height: 100px;
+}
+
 .usagetitle {
-  background-color: #000;
   color: #fff;
+  background-color: #222222;
   text-align: center;
   font-size: 10pt;
 }
+
 td.menuoptusage {
-  background-color: #dae3e9;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #444444;
   padding-left: 6px;
   padding-top: 1px; 
   padding-bottom: 0px;
   margin: 0px; 
   border: 0px;
   font-size: 9pt;
+}
+
+td.menuoptusage a {
+    /* Change link color to be more visible on a dark background */
+    color: #bbbbff;
 }
 /* END Banner */
 
@@ -89,7 +124,6 @@ td.menuoptusage {
 .leftcell {
   /* Border for the entire group of menus. */
   border: solid 2px black;
-  border-top: 0px;
 
   /* Style for text inlined between menus. */
   background-color: #def;
@@ -227,6 +261,10 @@ ul.menu li.newgroup {
   padding-right: 16px;
   margin-bottom: 8px;
   min-width: 95%; /* XXX Safari doesn't expand the div to fill the viewport. */
+  padding-bottom: 20px;
+  background-image: url(gradient-black-flipped.png);
+  background-repeat: repeat-x;
+  background-position: bottom left;
 }
 
 /* The black bar containing the page title. */
@@ -243,7 +281,12 @@ ul.menu li.newgroup {
   padding-left: 3px;
   clear: none; /* Let the version/login floats share the line.  XXX IE6 */
   line-height: 38px;
+  padding-bottom: 12px;
+  background-image: url(gradient-black.png);
+  background-repeat: repeat-x;
+  background-position: bottom left;
 }
+
 #versioninfo {
   color: #FFF;
   font-size: x-small;
@@ -351,14 +394,6 @@ ul.submenu li.newgroup {
   font-size: x-small;
   text-align: right;
   margin-bottom: 0px;
-}
-.pagenotworking {
-  background-color:#FFF;
-  font-size: x-small;
-  text-align: left;
-  margin-bottom: 6px;
-  margin-top: 0px;
-  font-weight: bold;
 }
 .reportbug {
   background-color:#FFF;
@@ -479,4 +514,17 @@ span.topbaroption { background-color:#E1E1EA; }
 	border: 2px solid black;
 	white-space: pre;
 	line-height: 110%;
+}
+
+dl {
+    padding-left: 10px;
+}
+
+dl dt {
+    font-weight: bold;
+}
+
+dl.envlist {
+    border: #ffff00 solid 2px;
+    background: #ffffcc;
 }
