Bam! Kick the brightness of the links in the usage iframe up a notch. On dark monitors (like Eric's), this will hopefully make the box a little easier to read. This is about as bright as I can make it while still looking vaguely blue-ish.

--- a/www/style.css
+++ b/www/style.css
@@ -109,7 +109,7 @@ td.menuoptusage {
 
 td.menuoptusage a {
     /* Change link color to be more visible on a dark background */
-    color: #bbbbff;
+    color: #ccccff;
 }
 /* END Banner */
 
